Исправление проблем с вёрсткой в главе про аутентификацию пользователя

--- a/protocols/symmetric/kerberos.tex
+++ b/protocols/symmetric/kerberos.tex
@@ -1,7 +1,7 @@
 \subsection{Протокол <<Kerberos>>}\index{протокол!Kerberos|(}\label{section-protocols-kerberos}
 \selectlanguage{russian}
 
-В данном разделе будет описан протокол аутентификации сторон с единственным доверенным центром. Сетевой протокол <<Ker\-be\-ros>> использует эти идеи при объединении нескольких доверенных центров в единую сеть для обеспечения надёжности и отказоустойчивости. Подробнее о сетевом протоколе <<Kerberos>> смотрите в разделе~\ref{section-kerberos}.
+В данном разделе будет описан протокол аутентификации сторон с единственным доверенным центром. Сетевой протокол <<Ker\-be\-ros>> использует эти идеи при объединении нескольких доверенных центров в единую сеть для обеспечения надёжности и отказоустойчивости. Подробнее о сетевом протоколе <<Kerberos>> смотрите в разделе~\ref{sec:kerberos}.
 
 \begin{figure}
 	\centering
