--- a/secure-systems-examples/kerberos.tex
+++ b/secure-systems-examples/kerberos.tex
@@ -1,4 +1,4 @@
-\section{Kerberos для локальной сети}\label{section-kerberos}
+\section{Kerberos для локальной сети}\label{sec:kerberos}
 \selectlanguage{russian}
 
 Система аутентификации и распределения ключей Kerberos основана на протоколе Нидхема~---~Шрёдера (см. разделы~\ref{section-protocols-needham-schroeder, section-protocols-kerberos}). Самые известные реализации протокола Kerberos включены в Microsoft Active Directory и ПО Kerberos с открытым исходным кодом для Unix.
