--- a/user-authentication/index.tex
+++ b/user-authentication/index.tex
@@ -27,9 +27,9 @@
 Стандартный набор символов паролей, которые можно набрать на клавиатуре, используя английские буквы и небуквенные символы, состоит из $D=94$ символов. При длине пароля $L$ символов и предположении равновероятного использования символов энтропия паролей равна
     \[ H = L \log_2 D. \]
 
-Клод Шеннон, исследуя энтропию символов английского текста, изучал вероятность успешного предсказания людьми следующего символа по первым нескольким символам слов или текста. В результате Шеннон получил оценку энтропии первого символа $s_1$ текста порядка $H(s_1) \approx 4{,}6$--$4{,}7$ бит/символ и оценки энтропий последующих символов, постепенно уменьшающиеся до $H(s_9) \approx 1{,}5$ бит/символ для 9-го символа. Энтропия для длинных текстов литературных произведений получила оценку $H(s_\infty) \approx 0{,}4$ бит/символ.
+Клод Шеннон (\langen{Claude Elwood Shannon}), исследуя энтропию символов английского текста, изучал вероятность успешного предсказания людьми следующего символа по первым нескольким символам слов или текста. В результате Шеннон получил оценку энтропии первого символа $s_1$ текста порядка $H(s_1) \approx 4{,}6$--$4{,}7$ бит/символ и оценки энтропий последующих символов, постепенно уменьшающиеся до $H(s_9) \approx 1{,}5$ бит/символ для 9-го символа. Энтропия для длинных текстов художественных произведений получила оценку $H(s_\infty) \approx 0{,}4$ бит/символ.
 
-Статистические исследования баз паролей показывают, что наиболее часто используются буквы <<a>>, <<e>>, <<o>>, <<r>> и цифра <<1>>.
+Статистические исследования баз паролей показывают, что в англоязычных текстах наиболее часто используются буквы <<a>>, <<e>>, <<o>>, <<r>> и цифра <<1>>.
 
 NIST (Национальный институт стандартов и технологий США, \langen{National Institute of Standards and Technology})  использует следующие рекомендации для оценки энтропии паролей\index{энтропия!пароля}, создаваемых людьми.
 \begin{enumerate}
@@ -81,11 +81,11 @@ NIST (Национальный институт стандартов и техн
 
 Имея доступ к наиболее массовым интернет-сервисам с количеством пользователей десятки и сотни миллионов, в которых пароли часто хранятся в открытом виде из-за необходимости обновления ПО и, в частности, выполнения аутентификации, мы:
 \begin{enumerate}
-	\item имеем базу паролей, покрывающую существенную часть пользователей; 
+	\item имеем базу паролей существенной части пользователей сети Интернет; 
 	\item можем статистически построить правила генерирования паролей.
 \end{enumerate}
 
-Даже если пароль хранится в защищённом виде, то при вводе пароль, как правило, в открытом виде пересылается по Интернету, и все преобразования пароля для аутентификации осуществляет интернет-сервис, а не веб-браузер. Следовательно, интернет-сервис имеет доступ к исходному паролю.
+Даже если пароль хранится в защищённом виде, то при вводе, как правило, он в открытом для сервиса виде пересылается по Интернету, и все преобразования пароля для аутентификации осуществляет интернет-сервис, а не веб-браузер. Следовательно, интернет-сервис периодически имеет доступ к исходному паролю.
 \exampleend
 
 В 2002 г. был подобран ключ для 64-битного блочного шифра RC5 сетью персональных компьютеров \texttt{distributed.net}, выполнявших вычисления в фоновом режиме. Суммарное время вычислений всех компьютеров -- 1757 дней, было проверено 83\% пространства всех ключей. Это означает, что пароли с оценочной энтропией менее 64 бит, то есть \emph{все пароли} до 40 символов по критериям NIST, могут быть подобраны в настоящее время. Конечно, с оговорками на то, что 1) нет ограничений на количество и частоту попыток аутентификаций, 2) алгоритм генерации вероятных паролей эффективен.
@@ -95,14 +95,14 @@ NIST (Национальный институт стандартов и техн
 
 \subsubsection{Число паролей}
 
-Приведём различные оценки числа паролей, создаваемых людьми. Чаще всего такие пароли основаны на словах или закономерностях естественного языка. В английском языке всего около $1\ 000\ 000 \approx 2^{20}$ слов, включая термины.
+Приведём различные оценки числа паролей, выбираемых людьми. Чаще всего такие пароли основаны на словах или закономерностях естественного языка. В английском языке всего около $1\ 000\ 000 \approx 2^{20}$ слов, включая термины.
 
 %http://www.springerlink.com/content/bh216312577r6w64/fulltext.pdf
 %http://www.antimoon.com/forum/2004/4797.htm
 
 Используемые слоги английского языка имеют вид V, CV, VC, CVV, VCC, CVC, CCV, CVCC, CVCCC, CCVCC, CCCVCC, где C -- согласная (consonant), V -- гласная (vowel). 70\% слогов имеют структуру VC или CVC. Общее число слогов $S = 8000 \dots 12000$. Средняя длина слога -- 3 буквы.
 
-Предполагая равновероятное распределение всех слогов английского языка, для числа паролей из $r$ слогов получим верхнюю оценку
+Предполагая равновероятное распределение слогов английского языка, для числа паролей из $r$ слогов получим верхнюю оценку
     \[ N_1 = S^r = 2^{13 r} \approx 2^{4.3 L_1}. \]
 Средняя длина паролей составит:
     \[ L_1 \approx 3 r. \]
@@ -254,30 +254,30 @@ NIST (Национальный институт стандартов и техн
 
 Чем больше таблица из $m$ строк, тем больше шансов найти пароль или ключ, выполнив в наихудшем случае   $O \left( m \frac{t(t+1)}{2} \right)$ операций.
 
-Примеры применения атаки на хэш-функциях $\textrm{MD5}$\index{хэш-функция!MD5}, $\textrm{LM} \sim \textrm{DES}_{\textrm{Password}} (\textrm{const})$ приведены в таблице~\ref{tab:rainbow-tables}.
+Примеры применения атаки на хэш-функциях $\textrm{MD5}$\index{хэш-функция!MD5}, $\textrm{LM}$ (т.~е. $\textrm{DES}_{\textrm{Password}} (\textrm{const})$) приведены в таблице~\ref{tab:rainbow-tables}.
 
 \begin{table}[!ht]
     \centering
     \caption{Атаки на радужных таблицах на \emph{одном} ПК\label{tab:rainbow-tables}}
     \resizebox{\textwidth}{!}{ \begin{tabular}{|c|c|c|c|c|c|c|}
         \hline
-            \multirow{2}{*}{\parbox{1.0cm}{\medskip\medskip \centering Длина, биты}} & \multicolumn{3}{|c|}{Пароль или ключ} &
-            \multicolumn{3}{|c|}{Радужная таблица} \\
+            \multirow{2}{*}{\parbox{1cm}{\centering\footnotesize \medskip\medskip\medskip Длина, биты}} & \multicolumn{3}{c|}{\footnotesize Пароль или ключ} &
+            \multicolumn{3}{c|}{\footnotesize Радужная таблица} \\
         \cline{2-7}
             &
-            \parbox{1.0cm}{\centering Длина,\\ симв.} &
-            Множество &
-            Мощность &
-            Объём &
-            \parbox{2.0cm}{\medspace \centering Время вычисления таблиц} & \parbox{1.1cm}{\centering Время поиска} \\
+            \parbox{1.0cm}{\centering\footnotesize Длина,\\ симв.} &
+            {\footnotesize Множество} &
+            {\footnotesize Мощность} &
+            {\footnotesize Объём} &
+            \parbox{1.7cm}{\centering\footnotesize \medspace Время вычисления таблиц} & \parbox{1.1cm}{\centering\footnotesize Время поиска} \\ [2ex]
         \hline \hline
-        \multicolumn{7}{|c|}{Хэш LM} \\
+        \multicolumn{7}{|c|}{\footnotesize Хэш LM} \\
         \hline
-        &  & A--Z & $2^{33}$ & 610 MB & \multirow{3}{*}{\parbox{1.5cm}{\centering несколько лет}} & 6 с \\
+        &  & A--Z & $2^{33}$ & 610 MB & \multirow{3}{*}{\parbox{1.7cm}{\centering несколько лет}} & 6 с \\
         $2 \times 56$ & 14 & A--Z, 0-9 & $2^{36}$ & 3 GB &  & 15 с \\
         & & все & $2^{43}$ & 64 GB &  & 7 мин \\
         \hline \hline
-        \multicolumn{7}{|c|}{Хэш MD5} \\
+        \multicolumn{7}{|c|}{\footnotesize Хэш MD5} \\
         \hline
         \rule{0pt}{2.5ex} 128 & 8 & A-Z, 0-9 & $2^{41}$ & 36 GiB & - & 4 мин \\
         \hline
