--- a/user-authentication/os_passwords.tex
+++ b/user-authentication/os_passwords.tex
@@ -18,10 +18,7 @@
 
 \subsection[Unix]{Хранение паролей в Unix}
 
-В ОС Unix данные пароля пользователя хранятся в файле \texttt{/etc/shadow} в виде хэша (SHA, MD5 и~т.~д.) или результата шифрования (DES, Blowfish и~т.~д.), вычисленного с <<солью>> $s$ длиной от 2 (для функции crypt в оригинальной ОС UNIX) до 16 (для Blowfish в OpenBSD) ASCII-символов. То, как используется <<соль>>, зависит от используемого алгоритма. Например, в традиционном алгоритме, используемом в оригинальном UNIX, <<соль>> модифицирует s-блоки и p-блоки в протоколе DES.
-
-Файл \texttt{/etc/shadow} доступен только привилегированным процессам, что вносит дополнительную защиту.
-
+В ОС Unix данные пароля пользователей хранятся в специальном файле \texttt{/etc/shadow}, запрещённого к чтению для обычных (не привилегированных) пользователям и сервисам. Данные хранятся в виде хэша (SHA, MD5 и~т.~д.) или результата шифрования (DES, Blowfish и~т.~д.), вычисленного с <<солью>> $s$ длиной от 2 (для функции crypt в оригинальной ОС UNIX) до 16 (для Blowfish в OpenBSD) ASCII-символов. То, как используется <<соль>>, зависит от используемого алгоритма. Например, в традиционном алгоритме, используемом в оригинальном UNIX, <<соль>> модифицирует s-блоки и p-блоки в протоколе DES.
 
 \subsection[Windows]{Хранение паролей и аутентификация в \protect\\ Windows}
 
@@ -51,4 +48,4 @@
 
 Как видно, протокол аутентификации NTLMv2 обеспечивает одностороннюю аутентификацию пользователя серверу (или своему ПК).
 
-При удалённой аутентификации по сети последние версии Windows используют протокол Kerberos, который обеспечивает взаимную аутентификацию, и, только если аутентификация по Kerberos не поддерживается клиентом или сервером, она происходит по NTLMv2.
+При удалённой аутентификации по сети последние версии ОС Windows используют протокол Kerberos (см. раздел~~\ref{sec:kerberos}), который обеспечивает взаимную аутентификацию клиента и сервера, и, только если аутентификация по Kerberos не поддерживается клиентом или сервером, она происходит по NTLMv2.
