--- a/user-authentication/openid.tex
+++ b/user-authentication/openid.tex
@@ -5,7 +5,7 @@
 
 Принцип аутентификации состоит в следующем.
 \begin{enumerate}
-    \item Пользователи и интернет-сервисы доверяют аутентификацию третьей стороне -- центру единой аутентификации.
+    \item Веб-сервисы доверяют аутентификацию пользователя третьей стороне -- центру аутентификации. Центров может быть несколько, но владельцы веб-сервиса могут ограничить выбор такого центра <<белым>> или <<чёрным>> списком.
     \item Когда пользователь заходит на интернет-ресурс, веб-при\-ло\-же\-ние перенаправляет его на центр аутентификации с защитой TLS-соединением.
     \item Центр аутентифицирует пользователя и выдаёт ему токен аутентификации, который пользователь предъявляет ин\-тер\-нет-сер\-ви\-су.
     \item Сервис по токену аутентификации определяет имя пользователя.
